objects/Coverage_Team_Comments__c.object
<CustomObject>
    <fields>
        <fullName>Month__c</fullName>
        <description>This are the Months which a User will use to choose when he/she is entries the comment.</description>
        <label>Month</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>January</fullName>
                </value>
                <value>
                    <fullName>February</fullName>
                </value>
                <value>
                    <fullName>March</fullName>
                </value>
                <value>
                    <fullName>April</fullName>
                </value>
                <value>
                    <fullName>May</fullName>
                </value>
                <value>
                    <fullName>June</fullName>
                </value>
                <value>
                    <fullName>July</fullName>
                </value>
                <value>
                    <fullName>August</fullName>
                </value>
                <value>
                    <fullName>September</fullName>
                </value>
                <value>
                    <fullName>October</fullName>
                </value>
                <value>
                    <fullName>November</fullName>
                </value>
                <value>
                    <fullName>December</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sector_Comments__c</fullName>
        <description>Monthly comments by Sector / Team  Head</description>
        <inlineHelpText>Current trends / challenges in Market/Sector/Segment 
Internal challenges faced &amp; reasons for deals lost 
What’s working / Plan to close Gap 
Pipeline &amp; quick wins in Sector/Segment
Top client declines (YoY)  
At risk clients that need a BAGL</inlineHelpText>
        <label>Sector Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Team_Name__c</fullName>
        <description>This Pick list hold the Values of the Hub in the Coverage South Africa</description>
        <label>Team Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Absa Capital</fullName>
                </value>
                <value>
                    <fullName>Capex Financial Solution</fullName>
                </value>
                <value>
                    <fullName>CIB Coverage</fullName>
                </value>
                <value>
                    <fullName>Client Value Management</fullName>
                </value>
                <value>
                    <fullName>Construction, Leisure &amp; Healthcare</fullName>
                </value>
                <value>
                    <fullName>Consumer Goods &amp; Service</fullName>
                </value>
                <value>
                    <fullName>Corporate Finance/ Sales</fullName>
                </value>
                <value>
                    <fullName>KZN and Eastern Cape</fullName>
                </value>
                <value>
                    <fullName>Markets Sales</fullName>
                </value>
                <value>
                    <fullName>Midcorp New Business Acquisitions</fullName>
                </value>
                <value>
                    <fullName>Midcorp Pretoria</fullName>
                </value>
                <value>
                    <fullName>Midcorp Sandton</fullName>
                </value>
                <value>
                    <fullName>Midcorp Sandton (CPF)</fullName>
                </value>
                <value>
                    <fullName>Money Market</fullName>
                </value>
                <value>
                    <fullName>Natural Resources</fullName>
                </value>
                <value>
                    <fullName>Public Sector</fullName>
                </value>
                <value>
                    <fullName>Public Sector (RBB)</fullName>
                </value>
                <value>
                    <fullName>Public Sector Gauteng</fullName>
                </value>
                <value>
                    <fullName>RFP</fullName>
                </value>
                <value>
                    <fullName>Service Managers</fullName>
                </value>
                <value>
                    <fullName>State Owner Companies</fullName>
                </value>
                <value>
                    <fullName>Telecoms, Media, Technology, Diversified</fullName>
                </value>
                <value>
                    <fullName>Western Cape</fullName>
                </value>
                <value>
                    <fullName>Western Cape Region and Consumer Foods &amp; Services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2015</fullName>
                </value>
                <value>
                    <fullName>2016</fullName>
                </value>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
                <value>
                    <fullName>2019</fullName>
                </value>
                <value>
                    <fullName>2020</fullName>
                </value>
                <value>
                    <fullName>2021</fullName>
                </value>
                <value>
                    <fullName>2022</fullName>
                </value>
                <value>
                    <fullName>2023</fullName>
                </value>
                <value>
                    <fullName>2024</fullName>
                </value>
                <value>
                    <fullName>2025</fullName>
                </value>
                <value>
                    <fullName>2026</fullName>
                </value>
                <value>
                    <fullName>2027</fullName>
                </value>
                <value>
                    <fullName>2028</fullName>
                </value>
                <value>
                    <fullName>2029</fullName>
                </value>
                <value>
                    <fullName>2030</fullName>
                </value>
                <value>
                    <fullName>2031</fullName>
                </value>
                <value>
                    <fullName>2032</fullName>
                </value>
                <value>
                    <fullName>2033</fullName>
                </value>
                <value>
                    <fullName>2034</fullName>
                </value>
                <value>
                    <fullName>2035</fullName>
                </value>
                <value>
                    <fullName>2036</fullName>
                </value>
                <value>
                    <fullName>2037</fullName>
                </value>
                <value>
                    <fullName>2038</fullName>
                </value>
                <value>
                    <fullName>2039</fullName>
                </value>
                <value>
                    <fullName>2040</fullName>
                </value>
                <value>
                    <fullName>2041</fullName>
                </value>
                <value>
                    <fullName>2042</fullName>
                </value>
                <value>
                    <fullName>2043</fullName>
                </value>
                <value>
                    <fullName>2044</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Coverage Team Comments</label>
    <nameField>
        <displayFormat>TC-{000000}</displayFormat>
        <label>Team Comments Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Coverage Team Comments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>